{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 63,
  "lineage": "8c43e9d6-e127-c86a-bf63-db33a8f5aed6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "strapi_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:internet-gateway/igw-06e98988fd20d1d26",
            "id": "igw-06e98988fd20d1d26",
            "owner_id": "607700977843",
            "region": "us-east-2",
            "tags": {
              "Name": "strapi-igw"
            },
            "tags_all": {
              "Name": "strapi-igw"
            },
            "vpc_id": "vpc-075a6e595608805b8"
          },
          "dependencies": [
            "aws_vpc.strapi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "strapi_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:607700977843:loadbalancer/app/strapi-alb/973a9645357b9f6d",
            "arn_suffix": "app/strapi-alb/973a9645357b9f6d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "strapi-alb-1798784429.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:607700977843:loadbalancer/app/strapi-alb/973a9645357b9f6d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "strapi-alb",
            "preserve_host_header": false,
            "region": "us-east-2",
            "security_groups": [
              "sg-0188a318d83248108"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0097b7283d68db484"
              },
              {
                "subnet_id": "subnet-086b56c8428f0e178"
              }
            ],
            "subnets": [
              "subnet-0097b7283d68db484",
              "subnet-086b56c8428f0e178"
            ],
            "tags": {
              "Name": "strapi-alb"
            },
            "tags_all": {
              "Name": "strapi-alb"
            },
            "vpc_id": "vpc-075a6e595608805b8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.strapi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "strapi_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:607700977843:listener/app/strapi-alb/973a9645357b9f6d/39ad8c4949f37eec",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:607700977843:targetgroup/strapi-tg/a7a1d2d7e76c357a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:607700977843:listener/app/strapi-alb/973a9645357b9f6d/39ad8c4949f37eec",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:607700977843:loadbalancer/app/strapi-alb/973a9645357b9f6d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.strapi_alb",
            "aws_lb_target_group.strapi_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.strapi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "strapi_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:607700977843:targetgroup/strapi-sg/e1b169fe6c0c66bb",
            "arn_suffix": "targetgroup/strapi-sg/e1b169fe6c0c66bb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:607700977843:targetgroup/strapi-sg/e1b169fe6c0c66bb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "strapi-sg",
            "port": 1337,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-075a6e595608805b8"
          },
          "dependencies": [
            "aws_vpc.strapi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "strapi_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:607700977843:targetgroup/strapi-tg/a7a1d2d7e76c357a",
            "arn_suffix": "targetgroup/strapi-tg/a7a1d2d7e76c357a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:607700977843:targetgroup/strapi-tg/a7a1d2d7e76c357a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "strapi-tg",
            "port": 1337,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-075a6e595608805b8"
          },
          "dependencies": [
            "aws_vpc.strapi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "strapi_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:route-table/rtb-05afdad396bea0620",
            "id": "rtb-05afdad396bea0620",
            "owner_id": "607700977843",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06e98988fd20d1d26",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "strapi-rt"
            },
            "tags_all": {
              "Name": "strapi-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-075a6e595608805b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.strapi_igw",
            "aws_vpc.strapi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042b59dd878573f34",
            "region": "us-east-2",
            "route_table_id": "rtb-05afdad396bea0620",
            "subnet_id": "subnet-0097b7283d68db484"
          },
          "dependencies": [
            "aws_internet_gateway.strapi_igw",
            "aws_route_table.strapi_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.strapi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008250b547d66646b",
            "region": "us-east-2",
            "route_table_id": "rtb-05afdad396bea0620",
            "subnet_id": "subnet-086b56c8428f0e178"
          },
          "dependencies": [
            "aws_internet_gateway.strapi_igw",
            "aws_route_table.strapi_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.strapi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:security-group/sg-0188a318d83248108",
            "description": "Security group for ALB to allow HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0188a318d83248108",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "607700977843",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-075a6e595608805b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.strapi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "strapi_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:security-group/sg-0aa9481b0d87b5d86",
            "description": "Allow traffic to Strapi app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa9481b0d87b5d86",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Strapi port",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1337
              }
            ],
            "name": "strapi-sg",
            "name_prefix": "",
            "owner_id": "607700977843",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "strapi-sg"
            },
            "tags_all": {
              "Name": "strapi-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-075a6e595608805b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.strapi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:subnet/subnet-0097b7283d68db484",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0097b7283d68db484",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "607700977843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "strapi-public-subnet-1"
            },
            "tags_all": {
              "Name": "strapi-public-subnet-1"
            },
            "vpc_id": "vpc-075a6e595608805b8"
          },
          "dependencies": [
            "aws_vpc.strapi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:subnet/subnet-086b56c8428f0e178",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086b56c8428f0e178",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "607700977843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "strapi-public-subnet-2"
            },
            "tags_all": {
              "Name": "strapi-public-subnet-2"
            },
            "vpc_id": "vpc-075a6e595608805b8"
          },
          "dependencies": [
            "aws_vpc.strapi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "strapi_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:vpc/vpc-075a6e595608805b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06f1c9a7cc7675731",
            "default_route_table_id": "rtb-0e5fb18c5d769e170",
            "default_security_group_id": "sg-01e690546e477003a",
            "dhcp_options_id": "dopt-03e3d26b708060323",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-075a6e595608805b8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e5fb18c5d769e170",
            "owner_id": "607700977843",
            "region": "us-east-2",
            "tags": {
              "Name": "strapi-vpc"
            },
            "tags_all": {
              "Name": "strapi-vpc"
            }
          }
        }
      ]
    }
  ]
}